repo acutalizado con los cambios nuevos

--- a/MyFronEnd/package.json
+++ b/MyFronEnd/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@tensorflow/tfjs": "^4.19.0",
