--- a/MyFronEnd/package.json
+++ b/MyFronEnd/package.json
@@ -28,7 +28,9 @@
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-share": "^10.2.1"
+    "react-native-share": "^10.2.1",
+    "react-native-svg": "^15.3.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
